[package]
name = "embin"
version = "1.1.2"
edition = "2021"
license = "MIT"
description = "Embed binary or text files into source code of a specific language"
authors = ["Martin Olivier <martin.olivier@live.fr>"]
homepage = "https://github.com/martin-olivier/embin"
repository = "https://github.com/martin-olivier/embin"
documentation = "https://github.com/martin-olivier/embin"
keywords = ["embed", "assets", "xxd", "deploy", "lang"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["/.github", "/.cargo", "/tests"]
readme = "README.md"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"

[package.metadata.deb]
copyright = "2023, Martin Olivier"
maintainer = "Martin Olivier <martin.olivier@live.fr>"
license-file = ["LICENSE"]
extended-description = "A simple program that can embed binary or text files into source code of a specific language"
priority = "optional"
section = "utility"
assets = [
    ["target/release/embin", "/usr/bin/embin", "755"],
    ["README.md", "/usr/share/doc/embin/README", "644"],
]