[package]
name = "embin"
version = "1.1.4"
edition = "2021"
license = "MIT"
description = "Embed binary or text files into source code of a specific language"
authors = ["Martin Olivier <martin.olivier@live.fr>"]
homepage = "https://github.com/martin-olivier/embin"
repository = "https://github.com/martin-olivier/embin"
documentation = "https://github.com/martin-olivier/embin"
keywords = ["embed", "assets", "xxd", "deploy", "lang"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["/.github", "/tests"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
colored = "3"
